# rusty-gba

./: Cargo.toml  LICENSE  README.md
asm_core/: Cargo.toml
asm_core/src/: arm_opcode.rs  lib.rs
bios/: Cargo.toml  README.md
engine/: Cargo.toml
engine/src/: arm_opcode.rs  lib.rs  memmap.rs  state.rs
gba/: Cargo.toml
gba/src/: hex_parser.rs  main.rs
gba_core/: Cargo.toml
gba_core/src/: gba_cartridge.rs  lib.rs
generate_dissasm_tests/: Cargo.toml
generate_dissasm_tests/src/: main.rs
sdl2/: Cargo.toml  README.md
sdl2/src/: main.rs
webasm/: Cargo.toml
